--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  width: 100%;
+  height: 100vh;
+  padding: 1px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+}
+.main{
+   width: 100%;
+  height: 100vh;
+  padding: 0px 100px; 
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.head{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.head h1{
+  font-size: 60px;
+  font-weight: bolder;
+  color: #4D6985;
+  margin-right: 80px;
+}
+
+.left-wrap{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.left-text{
+  font-size: 60px;
+  font-weight: bolder;
+  color: #4D6985;
+  margin-right: 80px;
+}
+.button{
+  margin-top: 100px;
+  width: 240px;
+  height: 60px;
+  border-radius: 40px;
+  font-size: 18px;
+  color: #60748D;
+  background-color: white;
+  border: 2px solid #7689A0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.players{
+  display: flex;
+  flex-direction: row;
+  margin-right: 40px;
+}
+.player {
+  width: 50%;
+  font-size: 18px;
+  font-weight: bold;
+  padding-bottom: 10px;
+  color: #9A9A9A;
+  border-radius: 4px solid #EFEFEF;
+  margin-bottom: 20px;
+}
+.playerx{
+  color: #41BED7;
+  border-bottom: 4px solid #41BED7;
+  
+}
+.playero{
+  color: #D6BAFA;
+  border-bottom: 4px solid #D6BAFA;
+}
+.game-wrap{
+  width: 300px;
+  height: 300px;
+  margin-right: 40px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.winner-wrap{
+ margin-right: 100px;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+.winner-text{
+  font-size: 50px;
+  font-weight: bolder;
+  color: #4D6985;
+}
+img{
+  margin-left: 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 600px) {
+  .head h1{
+    font-size: 30px;
+    margin-right: 20px;
+    margin-bottom: 20px;
   }
-  to {
-    transform: rotate(360deg);
+  .main{
+    flex-direction: column;
+    margin-top: 30px;
   }
+  .left-text{
+    font-size: 30px;
+    font-weight: bolder;
+    color: #4D6985;
+    margin-right: 1px;}
+ .left-wrap{
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;}
+  .button{
+        margin-top: 20px;
+        width: 400px;
+        height: 60px;
+        border-radius: 40px;
+        font-size: 18px;
+        
+       
+      }
 }
+
