--- a/src/App.css
+++ b/src/App.css
@@ -89,8 +89,11 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
+.right-wrap{
+  margin-left: 100px;
+}
 .winner-wrap{
- margin-right: 100px;
+ margin-right: 70px;
  display: flex;
  flex-direction: column;
  align-items: center;
