--- a/src/components/Squrestyle.css
+++ b/src/components/Squrestyle.css
@@ -1,6 +1,7 @@
 .squre-container{
     width: 100px;
     height: 100px;
+    margin-left: 0px;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
